--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,17 +10,14 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>*.xhtml</url-pattern> <!-- This mapping is correct -->
+        <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
-        <welcome-file>index.xhtml</welcome-file>  <!-- CHANGED (Recommended) -->
+        <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
-<!--    <context-param>-->
-<!--        <param-name>javax.faces.DEFAULT_SUFFIX</param-name>-->
-<!--        <param-value>.xhtml</param-value>-->
-<!--    </context-param>-->
+
     <context-param>
-        <param-name>javax.faces.PROJECT_STAGE</param-name> <!-- FIXED -->
+        <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
     <context-param>
@@ -32,4 +29,7 @@
         <param-value>true</param-value>
     </context-param>
 
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
 </web-app>
